--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body> 
     <header class="header">
-      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="../images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
+      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
       <div class="site-navigation">
         <nav class="nav-top">
           <div class="dropdown dropdown-lang"><a class="nav-link" href="#">RU</a>
