--- a/pages/catalog-item1.html
+++ b/pages/catalog-item1.html
@@ -10,7 +10,7 @@
   </head>
   <body> 
     <header class="header">
-      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="../images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
+      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
       <div class="site-navigation">
         <nav class="nav-top">
           <div class="dropdown dropdown-lang"><a class="nav-link" href="#">RU</a>
@@ -26,15 +26,15 @@
                     <ul class="list">
                       <li class="list_item"><a class="list_link" href="../index.html">Главная</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/catalog.html">Каталог</a>
+                      <li class="list_item"><a class="list_link" href="catalog.html">Каталог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/payment-delivery.html">Оплата/доставка</a>
+                      <li class="list_item"><a class="list_link" href="payment-delivery.html">Оплата/доставка</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/blog.html">Блог</a>
+                      <li class="list_item"><a class="list_link" href="blog.html">Блог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/aboutUs.html">О нас</a>
+                      <li class="list_item"><a class="list_link" href="aboutUs.html">О нас</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/contacts.html">Контакты</a>
+                      <li class="list_item"><a class="list_link" href="contacts.html">Контакты</a>
                       </li>
                     </ul>
         </nav>
@@ -42,15 +42,15 @@
                     <ul class="list">
                       <li class="list_item"><a class="list_link" href="../index.html">Главная</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/catalog.html">Каталог</a>
+                      <li class="list_item"><a class="list_link" href="catalog.html">Каталог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/payment-delivery.html">Оплата/доставка</a>
+                      <li class="list_item"><a class="list_link" href="payment-delivery.html">Оплата/доставка</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/blog.html">Блог</a>
+                      <li class="list_item"><a class="list_link" href="blog.html">Блог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/aboutUs.html">О нас</a>
+                      <li class="list_item"><a class="list_link" href="aboutUs.html">О нас</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/contacts.html">Контакты</a>
+                      <li class="list_item"><a class="list_link" href="contacts.html">Контакты</a>
                       </li>
                     </ul>
           <li class="dropdown-divider">
@@ -114,7 +114,7 @@
           <div class="social-media-block_down"><a href="" alt="telegram"><i class="fontawesome-icon fab fa-telegram"></i></a><a href="" alt="viber"><i class="fontawesome-icon fab fa-viber"></i></a><a href="" alt="whatsapp"><i class="fontawesome-icon fab fa-whatsapp"></i></a></div>
         </div>
         <div class="cooperation-block">
-          <div class="cooperation-items"><a href="../pages/contacts.html">Контакты</a><span class="divider">|</span><a href="../pages/blog.html#blog-item-cooperation">Сотрудничество</a></div>
+          <div class="cooperation-items"><a href="contacts.html">Контакты</a><span class="divider">|</span><a href="blog.html#blog-item-cooperation">Сотрудничество</a></div>
           <div class="payment-systems"><i class="fontawesome-icon fab fa-cc-visa fa-2x"></i><i class="fontawesome-icon fab fa-cc-mastercard fa-2x"></i></div>
         </div>
       </section>
