--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -10,7 +10,7 @@
   </head>
   <body> 
     <header class="header">
-      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="../images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
+      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
       <div class="site-navigation">
         <nav class="nav-top">
           <div class="dropdown dropdown-lang"><a class="nav-link" href="#">RU</a>
@@ -26,15 +26,15 @@
                     <ul class="list">
                       <li class="list_item"><a class="list_link" href="../index.html">Главная</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/catalog.html">Каталог</a>
+                      <li class="list_item"><a class="list_link" href="catalog.html">Каталог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/payment-delivery.html">Оплата/доставка</a>
+                      <li class="list_item"><a class="list_link" href="payment-delivery.html">Оплата/доставка</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/blog.html">Блог</a>
+                      <li class="list_item"><a class="list_link" href="blog.html">Блог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/aboutUs.html">О нас</a>
+                      <li class="list_item"><a class="list_link" href="aboutUs.html">О нас</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/contacts.html">Контакты</a>
+                      <li class="list_item"><a class="list_link" href="contacts.html">Контакты</a>
                       </li>
                     </ul>
         </nav>
@@ -42,15 +42,15 @@
                     <ul class="list">
                       <li class="list_item"><a class="list_link" href="../index.html">Главная</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/catalog.html">Каталог</a>
+                      <li class="list_item"><a class="list_link" href="catalog.html">Каталог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/payment-delivery.html">Оплата/доставка</a>
+                      <li class="list_item"><a class="list_link" href="payment-delivery.html">Оплата/доставка</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/blog.html">Блог</a>
+                      <li class="list_item"><a class="list_link" href="blog.html">Блог</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/aboutUs.html">О нас</a>
+                      <li class="list_item"><a class="list_link" href="aboutUs.html">О нас</a>
                       </li>
-                      <li class="list_item"><a class="list_link" href="../pages/contacts.html">Контакты</a>
+                      <li class="list_item"><a class="list_link" href="contacts.html">Контакты</a>
                       </li>
                     </ul>
           <li class="dropdown-divider">
@@ -63,7 +63,7 @@
     <section class="catalog">
       <div class="container">
         <ul class="catalog_list">
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item1.html"><img class="catalog-item_img" alt="cartholder_BitB102caFH" src="../../images/info/catalog/cartholder_BitB102caFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item1.html"><img class="catalog-item_img" alt="cartholder_BitB102caFH" src="../images/info/catalog/cartholder_BitB102caFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">кардхолдер Bit</h4>
                           <p class="catalog-item_color">Морковный</p>
@@ -71,7 +71,7 @@
                             <div class="catalog-item_price">250 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item2.html"><img class="catalog-item_img" alt="cartholder_BitB102brFH" src="../../images/info/catalog/cartholder_BitB102brFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item2.html"><img class="catalog-item_img" alt="cartholder_BitB102brFH" src="../images/info/catalog/cartholder_BitB102brFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">кардхолдер Bit</h4>
                           <p class="catalog-item_color">Коричневый</p>
@@ -79,7 +79,7 @@
                             <div class="catalog-item_price">250 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item3.html"><img class="catalog-item_img" alt="cartholder_BitB102blFH" src="../../images/info/catalog/cartholder_BitB102blFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item3.html"><img class="catalog-item_img" alt="cartholder_BitB102blFH" src="../images/info/catalog/cartholder_BitB102blFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">кардхолдер Bit</h4>
                           <p class="catalog-item_color">Черный</p>
@@ -87,7 +87,7 @@
                             <div class="catalog-item_price">250 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item4.html"><img class="catalog-item_img" alt="wallet_ShellC1032caFH" src="../../images/info/catalog/wallet_ShellC1032caFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item4.html"><img class="catalog-item_img" alt="wallet_ShellC1032caFH" src="../images/info/catalog/wallet_ShellC1032caFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">кошелек Shell</h4>
                           <p class="catalog-item_color">Морковный</p>
@@ -95,7 +95,7 @@
                             <div class="catalog-item_price">1000 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item5.html"><img class="catalog-item_img" alt="wallet_ShellC1032brFH" src="../../images/info/catalog/wallet_ShellC1032brFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item5.html"><img class="catalog-item_img" alt="wallet_ShellC1032brFH" src="../images/info/catalog/wallet_ShellC1032brFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">кошелек Shell</h4>
                           <p class="catalog-item_color">Коричневый</p>
@@ -103,7 +103,7 @@
                             <div class="catalog-item_price">1000 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item6.html"><img class="catalog-item_img" alt="wallet_ShellC1032blFH" src="../../images/info/catalog/wallet_ShellC1032blFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item6.html"><img class="catalog-item_img" alt="wallet_ShellC1032blFH" src="../images/info/catalog/wallet_ShellC1032blFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">кошелек Shell</h4>
                           <p class="catalog-item_color">Черный</p>
@@ -111,7 +111,7 @@
                             <div class="catalog-item_price">1000 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item7.html"><img class="catalog-item_img" alt="purse_WingD1084blFH" src="../../images/info/catalog/purse_WingD1084blFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item7.html"><img class="catalog-item_img" alt="purse_WingD1084blFH" src="../images/info/catalog/purse_WingD1084blFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">портмоне Wing</h4>
                           <p class="catalog-item_color">Черный</p>
@@ -119,7 +119,7 @@
                             <div class="catalog-item_price">1300 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item8.html"><img class="catalog-item_img" alt="purse_LeafD5164blFH" src="../../images/info/catalog/purse_LeafD5164blFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item8.html"><img class="catalog-item_img" alt="purse_LeafD5164blFH" src="../images/info/catalog/purse_LeafD5164blFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">портмоне Leaf</h4>
                           <p class="catalog-item_color">Черный</p>
@@ -127,7 +127,7 @@
                             <div class="catalog-item_price">1300 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item9.html"><img class="catalog-item_img" alt="necessar_KegE1010blFH" src="../../images/info/catalog/necessar_KegE1010blFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item9.html"><img class="catalog-item_img" alt="necessar_KegE1010blFH" src="../images/info/catalog/necessar_KegE1010blFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">несессер Keg</h4>
                           <p class="catalog-item_color">Черный</p>
@@ -135,7 +135,7 @@
                             <div class="catalog-item_price">1100 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href="../pages/catalog-item10.html"><img class="catalog-item_img" alt="purse_BigBossF2123blFH" src="../../images/info/catalog/purse_BigBossF2123blFH.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href="catalog-item10.html"><img class="catalog-item_img" alt="purse_BigBossF2123blFH" src="../images/info/catalog/purse_BigBossF2123blFH.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">портмоне BigBoss</h4>
                           <p class="catalog-item_color">Черный</p>
@@ -143,7 +143,7 @@
                             <div class="catalog-item_price">2300 грн.</div><i class="fontawesome-icon fas fa-chevron-right"></i>
                           </div>
                         </div></a></li>
-                    <li class="catalog_item"><a class="catalog-item_link" href=""><img class="catalog-item_img" alt="individual" src="../../images/info/catalog/individual.png">
+                    <li class="catalog_item"><a class="catalog-item_link" href=""><img class="catalog-item_img" alt="individual" src="../images/info/catalog/individual.png">
                         <div class="catalog-item_desc">
                           <h4 class="catalog-item_title">индивидуальный заказ</h4>
                           <p class="catalog-item_color"> </p>
@@ -170,7 +170,7 @@
           <div class="social-media-block_down"><a href="" alt="telegram"><i class="fontawesome-icon fab fa-telegram"></i></a><a href="" alt="viber"><i class="fontawesome-icon fab fa-viber"></i></a><a href="" alt="whatsapp"><i class="fontawesome-icon fab fa-whatsapp"></i></a></div>
         </div>
         <div class="cooperation-block">
-          <div class="cooperation-items"><a href="../pages/contacts.html">Контакты</a><span class="divider">|</span><a href="../pages/blog.html#blog-item-cooperation">Сотрудничество</a></div>
+          <div class="cooperation-items"><a href="contacts.html">Контакты</a><span class="divider">|</span><a href="blog.html#blog-item-cooperation">Сотрудничество</a></div>
           <div class="payment-systems"><i class="fontawesome-icon fab fa-cc-visa fa-2x"></i><i class="fontawesome-icon fab fa-cc-mastercard fa-2x"></i></div>
         </div>
       </section>
