--- a/pages/catalog-item1.html
+++ b/pages/catalog-item1.html
@@ -10,7 +10,7 @@
   </head>
   <body> 
     <header class="header">
-      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
+      <div class="logo"><a class="navbar-brand" href="../index.html"><img class="FHLogo" src="../images/info/logo/FHLogo_cr2.png" alt="FHLogo" title="Fox Hunter"></a></div>
       <div class="site-navigation">
         <nav class="nav-top">
           <div class="dropdown dropdown-lang"><a class="nav-link" href="#">RU</a>
@@ -73,8 +73,8 @@
                                     <div class="slider_item"><img class="slider_img" alt="preview-main_img" src="../images/info/catalog/cartholder_BitB1021caFH.png"></div>
                     </div>
                     <div class="catalog-item-preview-direction">
-                      <div class="catalog-item-preview-prev"></div>
-                      <div class="catalog-item-preview-next"></div>
+                      <div class="catalog-item-preview-prev"><i class="fas fa-chevron-left" aria-hidden="true"></i></div>
+                      <div class="catalog-item-preview-next"><i class="fas fa-chevron-right" aria-hidden="true"></i></div>
                     </div>
                     <div class="slider-preview-add">
                                     <div class="slider_item"><img class="slider_img" src="../images/info/catalog/cartholder_BitB102caFH.png"></div>
