--- a/pages/catalog-item4.html
+++ b/pages/catalog-item4.html
@@ -73,8 +73,8 @@
                                     <div class="slider_item"><img class="slider_img" alt="preview-main_img" src="../images/info/catalog/wallet_ShellC1031caFH.png"></div>
                     </div>
                     <div class="catalog-item-preview-direction">
-                      <div class="catalog-item-preview-prev"></div>
-                      <div class="catalog-item-preview-next"></div>
+                      <div class="catalog-item-preview-prev"><i class="fas fa-chevron-left" aria-hidden="true"></i></div>
+                      <div class="catalog-item-preview-next"><i class="fas fa-chevron-right" aria-hidden="true"></i></div>
                     </div>
                     <div class="slider-preview-add">
                                     <div class="slider_item"><img class="slider_img" src="../images/info/catalog/wallet_ShellC1032caFH.png"></div>
