--- a/pages/catalog-item7.html
+++ b/pages/catalog-item7.html
@@ -75,8 +75,8 @@
                                     <div class="slider_item"><img class="slider_img" alt="preview-main_img" src="../images/info/catalog/purse_WingD108blFH.png"></div>
                     </div>
                     <div class="catalog-item-preview-direction">
-                      <div class="catalog-item-preview-prev"></div>
-                      <div class="catalog-item-preview-next"></div>
+                      <div class="catalog-item-preview-prev"><i class="fas fa-chevron-left" aria-hidden="true"></i></div>
+                      <div class="catalog-item-preview-next"><i class="fas fa-chevron-right" aria-hidden="true"></i></div>
                     </div>
                     <div class="slider-preview-add">
                                     <div class="slider_item"><img class="slider_img" src="../images/info/catalog/purse_WingD1084blFH.png"></div>
